--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "stripe": "^14.9.0"
   }
 }
